--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- this is my header section-->
     <header>
-      <nav class="navbar navbar-expand-lg bg-primary">
+      <nav class="navbar navbar-expand-lg bg-white">
         <div class="container">
           <a class="navbar-brand" href="#">Traveller</a>
           <button
@@ -67,7 +67,7 @@
                 placeholder="Search"
                 aria-label="Search"
               />
-              <button class="btn btn-outline-success" type="submit">
+              <button class="btn btn-outline-success button" type="submit">
                 Search
               </button>
             </form>
